# Calinix

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FLOW.md  README.md  bench.md  cal-design.excalidraw  config.yaml
benchmark/: README.md  calinix-policy-bench.rs  calinix-url-bench.rs  plot_policy_bench.py  plot_url_bench.py  run.sh  run_policy.sh
benchmark/data/: example_prompts.txt  generate_payloads.py  short_payloads.json
benchmark/results/new-policy-v1/: policy_bench.csv
benchmark/results/new-policy-v2/: policy_bench.csv
benchmark/results/new-policy-v3/: policy_bench.csv
benchmark/results/new-policy-v3-1/: policy_bench.csv
benchmark/results/policy-bench/: policy_bench.csv
benchmark/results/policy-bench-v2/: policy_bench.csv
benchmark/results/single-huge/: url_bench.csv
benchmark/results/single-mixed/: url_bench.csv
benchmark/results/single-short/: url_bench.csv
benchmark/results/sweep-mixed/: url_bench_sweep.csv
benchmark/results/sweep-short/: url_bench_sweep.csv
designs/: CAL-design.excalidraw
e2e/routing/: config.yaml  docker-compose.yml  mock_pod.py  run.sh
examples/: benchMarkList.md  prefillDecode.md
nginx/: flow.txt
src/: bench_part2.rs  bitmap.rs  execute.rs  filter.rs  hash.rs  indexer.rs  main.rs  mock_pod.rs  pick.rs  prepare.rs  protocol.rs  score.rs  tests.rs  types.rs  workflow.rs
src/base/: hash.rs  main.rs
src/calinix/: lib.rs
src/calinix/app/: bootstrap.rs  state.rs
src/calinix/cache_registry/: alive.rs  block_hash.rs  cleanup.rs  cumulative_hash.rs  events.rs  fibonacci.rs  mod.rs  (+5 more)
tests/: stream.rs
(+32 files in other folders)
